...
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
                  children: <Widget>[
                    ValueListenableBuilder<Size?>(
                      valueListenable: photoSize,
                      builder: (context, value, child) => TextButton(
                        key: ValueKey("resolutionButton"),
                        onPressed: _buildChangeResolutionDialog,
                        child: Text(
                          '${value?.width.toInt()} / ${value?.height.toInt()}',
                          key: ValueKey("resolutionTxt"),
                          style: TextStyle(color: Colors.white),
                        ),
                      ),
                    ),
                  ],
                ),
...

  _buildChangeResolutionDialog() {
    showModalBottomSheet(
        context: context,
        builder: (context) => ListView.separated(
            itemBuilder: (context, index) => ListTile(
                  key: ValueKey("resOption"),
                  onTap: () {
                    setState(() {
                      this.photoSize.value = availableSizes?[index];
                      Navigator.of(context).pop();
                    });
                  },
...
