...
                  children: [
                    Icon(
                      Icons.photo_camera,
                      color: Colors.white,
                    ),
                    Switch(
                      key: ValueKey('captureModeSwitch'),
                      value: (captureMode.value == CaptureModes.VIDEO),
                      activeColor: Color(0xFF4F6AFF),
                      onChanged: !isRecording
                          ? (value) {
                              HapticFeedback.heavyImpact();
                              onCaptureModeSwitchChange.call();
...
